syntax = "proto3";

package readly.v1;

option go_package = "readly/pb";

message DeleteBookRequest {
  int64 book_id = 1;
}