syntax = "proto3";

package readly.v1;

option go_package = "readly/pb/readly/v1;pb";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "readly/v1/rpc_delete_book.proto";
import "readly/v1/rpc_get_book.proto";
import "readly/v1/rpc_register_book.proto";

service BookService {
  rpc RegisterBook(RegisterBookRequest) returns (RegisterBookResponse) {
    option (google.api.http) = {
      post: "/v1/books"
      body: "*"
    };
  }

  rpc GetBook(GetBookRequest) returns (GetBookResponse) {
    option (google.api.http) = {
      get: "/v1/books/{book_id}"
    };
  }

  rpc DeleteBook(DeleteBookRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/v1/books/{book_id}"
    };
  }
}